[package]
name = "y"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
y_p2p = { path = "./p2p", version = "0.1.0" }
actix-web = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
tokio = "0.1"

[workspace]
members = ["p2p","crypto"]
